Fix issue with font awesome icons not showing
Updates to ensure that font awesome fonts are properly loaded.

--- a/_sass/_webfonts.scss
+++ b/_sass/_webfonts.scss
@@ -1,6 +1,9 @@
 /*!
  * Font definitions for webfonts
  */
+@function font-path($path) {
+  @return "/fonts/" + $path;
+}
 
 @import "webfonts/calluna-regular";
 @import "webfonts/calluna-sans";
